--- a/taoProctoring/locales/es-MX/eligibility.rdf.po
+++ b/taoProctoring/locales/es-MX/eligibility.rdf.po
@@ -1,17 +1,16 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.2.0-sprint42\n"
+"Project-Id-Version: TAO 3.2.0-sprint105\n"
 "PO-Revision-Date: 2017-06-07T09:13:02\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
-"Language: es-ES\n"
+"Language: es-MX\n"
 "sourceLanguage: en-US\n"
-"targetLanguage: es-ES\n"
+"targetLanguage: es-MX\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # http://www.tao.lu/Ontologies/TAOProctor.rdf#DeliveryEligibility
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Delivery Eligibility"
-msgstr ""
-
+msgstr "Elegibilidad para entrega"
