--- a/taoOutcomeUi/locales/de-DE/messages.po
+++ b/taoOutcomeUi/locales/de-DE/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint100\n"
-"PO-Revision-Date: 2019-04-26T11:57:17\n"
+"Project-Id-Version: TAO 3.3.0-sprint105\n"
+"PO-Revision-Date: 2019-07-05T08:47:22\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: de-DE\n"
@@ -179,11 +179,14 @@ msgstr ""
 msgid "Start Time"
 msgstr ""
 
+msgid "Test Taker"
+msgstr "Testteilnehmer"
+
 msgid "Test taker"
 msgstr "Testteilnehmer"
 
-msgid "Test Taker"
-msgstr "Testteilnehmer"
+msgid "Test Taker ID"
+msgstr ""
 
 msgid "Test Variables"
 msgstr "Testvariablen"
@@ -219,10 +222,4 @@ msgstr "Anzeigen und Formatieren der gesammelten Ergebnisse."
 
 msgid "We are preparing your report, please wait..."
 msgstr "Bericht wird vorbereitet, bitte warten..."
-
-msgid "You have just completed your practice exam."
-msgstr ""
-
-msgid "Your\'s statistic."
-msgstr ""
 
