--- a/taoOutcomeUi/locales/es-ES/messages.po
+++ b/taoOutcomeUi/locales/es-ES/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint100\n"
-"PO-Revision-Date: 2019-04-26T11:57:18\n"
+"Project-Id-Version: TAO 3.3.0-sprint105\n"
+"PO-Revision-Date: 2019-07-05T08:47:22\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: es-ES\n"
@@ -179,11 +179,14 @@ msgstr ""
 msgid "Start Time"
 msgstr ""
 
+msgid "Test Taker"
+msgstr "Participante"
+
 msgid "Test taker"
 msgstr "Partiicipante"
 
-msgid "Test Taker"
-msgstr "Participante"
+msgid "Test Taker ID"
+msgstr ""
 
 msgid "Test Variables"
 msgstr "Variables de la prueba"
@@ -219,10 +222,4 @@ msgstr "Ver y dar formato a los resultados coleccionados."
 
 msgid "We are preparing your report, please wait..."
 msgstr "Estamos preparando su informe, por favor espere..."
-
-msgid "You have just completed your practice exam."
-msgstr ""
-
-msgid "Your\'s statistic."
-msgstr ""
 
