--- a/taoOutcomeUi/locales/is-IS/messages.po
+++ b/taoOutcomeUi/locales/is-IS/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint100\n"
-"PO-Revision-Date: 2019-04-26T11:57:18\n"
+"Project-Id-Version: TAO 3.3.0-sprint105\n"
+"PO-Revision-Date: 2019-07-05T08:47:22\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: is-IS\n"
@@ -179,11 +179,14 @@ msgstr ""
 msgid "Start Time"
 msgstr ""
 
+msgid "Test Taker"
+msgstr "Próftaki"
+
 msgid "Test taker"
 msgstr "Próftaki"
 
-msgid "Test Taker"
-msgstr "Próftaki"
+msgid "Test Taker ID"
+msgstr ""
 
 msgid "Test Variables"
 msgstr "Prófbreytur"
@@ -219,10 +222,4 @@ msgstr "Skoða og forsníða safnaðar niðurstöður."
 
 msgid "We are preparing your report, please wait..."
 msgstr "Við erum að undirbúa skýrslu þína, gerðu svo vel að bíða..."
-
-msgid "You have just completed your practice exam."
-msgstr ""
-
-msgid "Your\'s statistic."
-msgstr ""
 
