--- a/taoOutcomeUi/locales/it-IT/messages.po
+++ b/taoOutcomeUi/locales/it-IT/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint100\n"
-"PO-Revision-Date: 2019-04-26T11:57:18\n"
+"Project-Id-Version: TAO 3.3.0-sprint105\n"
+"PO-Revision-Date: 2019-07-05T08:47:22\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: it-IT\n"
@@ -179,11 +179,14 @@ msgstr ""
 msgid "Start Time"
 msgstr ""
 
+msgid "Test Taker"
+msgstr "Partecipante al test"
+
 msgid "Test taker"
 msgstr "Partecipante al test"
 
-msgid "Test Taker"
-msgstr "Partecipante al test"
+msgid "Test Taker ID"
+msgstr ""
 
 msgid "Test Variables"
 msgstr "Variabili di prova"
@@ -219,10 +222,4 @@ msgstr "Visualizza e formatta i risultati raccolti"
 
 msgid "We are preparing your report, please wait..."
 msgstr "Stiamo preparando il tuo report, prego aspetta...."
-
-msgid "You have just completed your practice exam."
-msgstr ""
-
-msgid "Your\'s statistic."
-msgstr ""
 
