--- a/taoOutcomeUi/locales/ja-JP/messages.po
+++ b/taoOutcomeUi/locales/ja-JP/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint100\n"
-"PO-Revision-Date: 2019-04-26T11:57:18\n"
+"Project-Id-Version: TAO 3.3.0-sprint105\n"
+"PO-Revision-Date: 2019-07-05T08:47:22\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: ja-JP\n"
@@ -179,11 +179,14 @@ msgstr ""
 msgid "Start Time"
 msgstr ""
 
+msgid "Test Taker"
+msgstr "受験者"
+
 msgid "Test taker"
 msgstr "受験者"
 
-msgid "Test Taker"
-msgstr "受験者"
+msgid "Test Taker ID"
+msgstr ""
 
 msgid "Test Variables"
 msgstr "テスト変数"
@@ -219,10 +222,4 @@ msgstr "収集された結果の表示とフォーマット。"
 
 msgid "We are preparing your report, please wait..."
 msgstr "レポート作成中、しばらくお待ちください..."
-
-msgid "You have just completed your practice exam."
-msgstr ""
-
-msgid "Your\'s statistic."
-msgstr ""
 
