--- a/taoOutcomeUi/locales/nl-NL/messages.po
+++ b/taoOutcomeUi/locales/nl-NL/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint100\n"
-"PO-Revision-Date: 2019-04-26T11:57:18\n"
+"Project-Id-Version: TAO 3.3.0-sprint105\n"
+"PO-Revision-Date: 2019-07-05T08:47:22\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: nl-NL\n"
@@ -179,11 +179,14 @@ msgstr ""
 msgid "Start Time"
 msgstr ""
 
+msgid "Test Taker"
+msgstr "Kandidaat"
+
 msgid "Test taker"
 msgstr "Kandidaat"
 
-msgid "Test Taker"
-msgstr "Kandidaat"
+msgid "Test Taker ID"
+msgstr ""
 
 msgid "Test Variables"
 msgstr "Toets variabelen"
@@ -219,10 +222,4 @@ msgstr "Bekijk en formateer de verzamelde resultaten."
 
 msgid "We are preparing your report, please wait..."
 msgstr "We zijn uw rapport aan het voorbereiden; Een moment geduld a.u.b..."
-
-msgid "You have just completed your practice exam."
-msgstr ""
-
-msgid "Your\'s statistic."
-msgstr ""
 
