--- a/taoOutcomeUi/locales/zh-CN/messages.po
+++ b/taoOutcomeUi/locales/zh-CN/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint100\n"
-"PO-Revision-Date: 2019-04-26T11:57:19\n"
+"Project-Id-Version: TAO 3.3.0-sprint105\n"
+"PO-Revision-Date: 2019-07-05T08:47:22\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: zh-CN\n"
@@ -179,11 +179,14 @@ msgstr ""
 msgid "Start Time"
 msgstr ""
 
+msgid "Test Taker"
+msgstr "考生"
+
 msgid "Test taker"
 msgstr "考生"
 
-msgid "Test Taker"
-msgstr "考生"
+msgid "Test Taker ID"
+msgstr ""
 
 msgid "Test Variables"
 msgstr "考试可变数"
@@ -219,10 +222,4 @@ msgstr "视图和格式收集的结果。"
 
 msgid "We are preparing your report, please wait..."
 msgstr "我们正在准备你的报告，请稍等。"
-
-msgid "You have just completed your practice exam."
-msgstr ""
-
-msgid "Your\'s statistic."
-msgstr ""
 
