--- a/taoQtiTest/locales/en-GB/messages.po
+++ b/taoQtiTest/locales/en-GB/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: TAO 3.3.0-sprint105\n"
-"PO-Revision-Date: 2019-06-21T09:20:04\n"
+"PO-Revision-Date: 2019-07-05T12:47:11\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: en-GB\n"
@@ -361,10 +361,10 @@ msgstr ""
 msgid "Enables skipping to items within this section. Requires the review screen option."
 msgstr ""
 
-msgid "End test"
+msgid "End Test"
 msgstr ""
 
-msgid "End Test"
+msgid "End test"
 msgstr ""
 
 msgid "Enter a blueprint"
@@ -445,6 +445,9 @@ msgstr ""
 
 msgid "Go to the next item?"
 msgstr ""
+
+msgid "Gray on Green"
+msgstr "Grey on Green"
 
 msgid "Gray on green (low contrast option)"
 msgstr "Grey on green (low contrast option)"
@@ -557,10 +560,10 @@ msgstr ""
 msgid "Item Session Control"
 msgstr ""
 
-msgid "Items"
+msgid "items"
 msgstr ""
 
-msgid "items"
+msgid "Items"
 msgstr ""
 
 msgid "Items can optionally be assigned to one or more categories."
@@ -617,10 +620,10 @@ msgstr ""
 msgid "Manage test properties"
 msgstr ""
 
-msgid "Manage Tests"
+msgid "Manage tests"
 msgstr ""
 
-msgid "Manage tests"
+msgid "Manage Tests"
 msgstr ""
 
 msgid "Mark for review"
@@ -677,7 +680,7 @@ msgstr ""
 msgid "Missed test package file"
 msgstr ""
 
-msgid "Missing required option %s"
+msgid "Missing required configuration option %s"
 msgstr ""
 
 msgid "Move Down"
@@ -893,10 +896,10 @@ msgstr ""
 msgid "Scoring"
 msgstr ""
 
-msgid "Scratch Pad"
+msgid "Scratch pad"
 msgstr ""
 
-msgid "Scratch pad"
+msgid "Scratch Pad"
 msgstr ""
 
 msgid "Scratchpad"
