--- a/tao/locales/fr-FR/messages.po
+++ b/tao/locales/fr-FR/messages.po
@@ -466,7 +466,7 @@ msgid "Close"
 msgstr "Fermer"
 
 msgid "Close message"
-msgstr ""
+msgstr "Fermer le message"
 
 msgid "Code Version"
 msgstr ""
@@ -844,7 +844,7 @@ msgid "First Name"
 msgstr "Prénom"
 
 msgid "First page"
-msgstr ""
+msgstr "Première page"
 
 msgid "First row column names"
 msgstr "Noms de colonne en première ligne"
@@ -868,7 +868,7 @@ msgid "Form data not saved."
 msgstr ""
 
 msgid "From"
-msgstr ""
+msgstr "De"
 
 msgid "Fuzzy Matching"
 msgstr ""
@@ -1081,7 +1081,7 @@ msgid "Last Name"
 msgstr "Nom"
 
 msgid "Last page"
-msgstr ""
+msgstr "Dernière page"
 
 msgid "Last result"
 msgstr ""
@@ -1997,7 +1997,7 @@ msgid "Title"
 msgstr ""
 
 msgid "to"
-msgstr ""
+msgstr "à"
 
 msgid "To reset your password, click the link below, or paste it into your browser. You will then be prompted to create a new password."
 msgstr ""
