--- a/taoDelivery/locales/es-MX/messages.po
+++ b/taoDelivery/locales/es-MX/messages.po
@@ -1,12 +1,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: TAO 3.3.0-sprint105\n"
-"PO-Revision-Date: 2019-07-05T08:37:15\n"
+"PO-Revision-Date: 2019-07-01T12:42:40\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
-"Language: ru-RU\n"
+"Language: es-MX\n"
 "sourceLanguage: en-US\n"
-"targetLanguage: ru-RU\n"
+"targetLanguage: es-MX\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Basepath: ../../\n"
@@ -53,7 +53,7 @@ msgid "Start"
 msgstr ""
 
 msgid "Started at %s"
-msgstr "Дата начала %s"
+msgstr "Empezó a las %s"
 
 msgid "Take or continue a test."
 msgstr ""
