--- a/taoDelivery/locales/es-MX/messages.po
+++ b/taoDelivery/locales/es-MX/messages.po
@@ -17,65 +17,64 @@ msgid "Access deliveries as a guest"
 msgstr ""
 
 msgid "All rights reserved."
-msgstr ""
+msgstr "Todos los derechos reservados."
 
 msgid "Available"
-msgstr ""
+msgstr "Disponible"
 
 msgid "Close this prompt"
-msgstr ""
+msgstr "Cerrar esta instrucción"
 
 msgid "Delivery Execution for %s not found"
 msgstr ""
 
 msgid "Enter full screen"
-msgstr ""
+msgstr "Ingresar en pantalla completa"
 
 msgid "Exit"
-msgstr ""
+msgstr "Salir"
 
 msgid "Guest access"
-msgstr ""
+msgstr "Acceso de invitados"
 
 msgid "In progress"
-msgstr ""
+msgstr "En progreso"
 
 msgid "Logout"
-msgstr ""
+msgstr "Cierre de sesión"
 
 msgid "My Tests"
-msgstr ""
+msgstr "Mis exámenes"
 
 msgid "Resume"
-msgstr ""
+msgstr "Reanudar"
 
 msgid "Start"
-msgstr ""
+msgstr "Empezar"
 
 msgid "Started at %s"
-msgstr "Empezó a las %s"
+msgstr "Comenzó a las %s"
 
 msgid "Take or continue a test."
-msgstr ""
+msgstr "Hacer o continuar una prueba."
 
 msgid "TAO - An Open and Versatile Computer-Based Assessment Platform"
-msgstr ""
+msgstr "TAO_ Una Plataforma de Evaluación Abierta y Versátil Basada en Computador"
 
 msgid "TAO Delivery Server"
-msgstr ""
+msgstr "Servidor de Entreda TAO"
 
 msgid "TAO Guest Access"
-msgstr ""
+msgstr "Acceso de invitados TAO"
 
 msgid "Test-Takers"
-msgstr ""
+msgstr "Examinandos"
 
 msgid "Tests Home"
 msgstr ""
 
 msgid "This test needs to be taken in full screen mode"
-msgstr ""
+msgstr "Esta prueba debe tomarse en modo de pantalla completa"
 
 msgid "You are no longer allowed to take this test"
-msgstr ""
-
+msgstr "Ya no tiene permiso para tomar esta prueba"
