change "Résiliation et irrégularité" to "Clôturer le test"

--- a/taoProctoring/locales/fr-FR/messages.po
+++ b/taoProctoring/locales/fr-FR/messages.po
@@ -819,7 +819,7 @@ msgid "Terminate"
 msgstr "Mettre fin"
 
 msgid "Terminate and irregularity"
-msgstr "Résiliation et irrégularité"
+msgstr "Clôturer le test"
 
 msgid "Terminate Session"
 msgstr "Mettre fin à une session"
