--- a/taoProctoring/locales/es-MX/messages.po
+++ b/taoProctoring/locales/es-MX/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint106\n"
-"PO-Revision-Date: 2019-07-19T08:15:53\n"
+"Project-Id-Version: TAO 3.3.0-sprint110\n"
+"PO-Revision-Date: 2019-09-13T08:52:38\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: es-MX\n"
@@ -18,6 +18,9 @@ msgstr "%1$s - Ítem %2$s/%3$s"
 
 msgid "%d sessions of the delivery %s have not been paused"
 msgstr "%d sesiones de la entrega %s no se pausaron"
+
+msgid "%s - item %p/%c"
+msgstr ""
 
 msgid "%s completed"
 msgstr "%s completado"
@@ -155,10 +158,10 @@ msgstr "autor"
 msgid "Authorize"
 msgstr "Autorizar"
 
-msgid "Authorize session"
+msgid "Authorize Session"
 msgstr "Autorizar sesión"
 
-msgid "Authorize Session"
+msgid "Authorize session"
 msgstr "Autorizar sesión"
 
 msgid "Authorize sessions"
@@ -170,11 +173,11 @@ msgstr "Autorizar al supervisor"
 msgid "Authorize the selected proctors"
 msgstr "Autorizar a los supervisores seleccionados"
 
-msgid "Authorized"
-msgstr "Autorizado"
-
 msgid "authorized"
 msgstr "autorizado"
+
+msgid "Authorized"
+msgstr "Autorizado"
 
 msgid "Authorized but not started"
 msgstr "Autorizado pero no iniciado"
@@ -212,11 +215,11 @@ msgstr "Volver a sesiones"
 msgid "Behaviour"
 msgstr "Comportamiento"
 
-msgid "Cancel"
-msgstr "Cancelar"
-
 msgid "cancel"
 msgstr "cancelar"
+
+msgid "Cancel"
+msgstr "Cancelar"
 
 msgid "cancel the action"
 msgstr "cancelar la acción"
@@ -317,11 +320,11 @@ msgstr "Actividad de evaluación actual"
 msgid "Current sessions"
 msgstr "Sesiones actuales"
 
-msgid "Date"
-msgstr "Fecha"
-
 msgid "date"
 msgstr "fecha"
+
+msgid "Date"
+msgstr "Fecha"
 
 msgid "Days"
 msgstr "Días"
@@ -387,10 +390,10 @@ msgstr "Exportar irregularidades"
 msgid "Extended Time"
 msgstr "Tiempo extendido"
 
-msgid "Extra Time"
+msgid "Extra time"
 msgstr "Tiempo adicional"
 
-msgid "Extra time"
+msgid "Extra Time"
 msgstr "Tiempo adicional"
 
 msgid "Extra time granted"
@@ -402,11 +405,11 @@ msgstr "Filtro"
 msgid "Filter by the selected dates"
 msgstr "Filtrar por las fechas seleccionadas"
 
-msgid "Finished"
-msgstr "Finalizado"
-
 msgid "finished"
 msgstr "finalizado"
+
+msgid "Finished"
+msgstr "Finalizado"
 
 msgid "First name"
 msgstr "Nombre"
@@ -571,20 +574,20 @@ msgstr "Pausar sesiones de prueba activas"
 msgid "Pause due to server maintenance"
 msgstr "Pausar debido a mantenimiento del servidor"
 
-msgid "Pause session"
+msgid "Pause Session"
 msgstr "Pausar sesión"
 
-msgid "Pause Session"
+msgid "Pause session"
 msgstr "Pausar sesión"
 
 msgid "Pause sessions"
 msgstr "Pausar sesiones"
 
-msgid "paused"
-msgstr "pausado"
-
 msgid "Paused"
 msgstr "Pausado"
+
+msgid "paused"
+msgstr "pausado"
 
 msgid "Please select one or more test site to manage proctors"
 msgstr "Seleccione uno o más emplazamientos de prueba para gestionar supervisores"
@@ -646,10 +649,10 @@ msgstr "Supervisores revocados"
 msgid "Progress"
 msgstr "Progreso"
 
-msgid "Reactivate session"
+msgid "Reactivate Session"
 msgstr "Reactivar sesión"
 
-msgid "Reactivate Session"
+msgid "Reactivate session"
 msgstr "Reactivar sesión"
 
 msgid "Refresh"
@@ -679,10 +682,10 @@ msgstr "Reporte"
 msgid "Report irregularities"
 msgstr "Reportar irregularidades"
 
-msgid "Report irregularity"
+msgid "Report Irregularity"
 msgstr "Reportar irregularidad"
 
-msgid "Report Irregularity"
+msgid "Report irregularity"
 msgstr "Reportar irregularidad"
 
 msgid "reported for irregularity"
@@ -740,11 +743,11 @@ msgstr "Sesiones"
 msgid "Sessions authorized"
 msgstr "Sesiones autorizadas"
 
-msgid "Sessions paused"
-msgstr "Sesiones pausadas"
-
 msgid "sessions paused"
 msgstr "sesiones pausadas"
+
+msgid "Sessions paused"
+msgstr "Sesiones pausadas"
 
 msgid "Sessions reactivated"
 msgstr "Sesiones reactivadas"
@@ -800,11 +803,11 @@ msgstr "Iniciado el"
 msgid "Status"
 msgstr "Estado"
 
-msgid "Subcategory"
-msgstr "Subcategoría"
-
 msgid "subcategory"
 msgstr "subcategoría"
+
+msgid "Subcategory"
+msgstr "Subcategoría"
 
 msgid "System generated pause."
 msgstr "Pausa generada por el sistema."
@@ -821,10 +824,10 @@ msgstr "Terminar"
 msgid "Terminate and irregularity"
 msgstr "Terminación e irregularidad"
 
-msgid "Terminate Session"
+msgid "Terminate session"
 msgstr "Terminar sesión"
 
-msgid "Terminate session"
+msgid "Terminate Session"
 msgstr "Terminar sesión"
 
 msgid "Terminate sessions"
@@ -833,11 +836,11 @@ msgstr "Terminar sesiones"
 msgid "Terminate/Reactivate and irregularity"
 msgstr "Terminar/Reactivar e irregularidad"
 
-msgid "terminated"
-msgstr "terminada"
-
 msgid "Terminated"
 msgstr "Terminada"
+
+msgid "terminated"
+msgstr "terminada"
 
 msgid "Test  must be terminated."
 msgstr "La prueba debe terminarse."
@@ -911,11 +914,11 @@ msgstr "La prueba no se inició."
 msgid "Test site %s"
 msgstr "Emplazamiento de prueba %s"
 
-msgid "Test taker"
-msgstr "Examinado"
-
 msgid "test taker"
 msgstr "examinado"
+
+msgid "Test taker"
+msgstr "Examinado"
 
 msgid "Test takers have been added"
 msgstr "Se añadieron examinados"
