--- a/taoOutcomeUi/locales/lt-LT/reviewerRole.rdf.po
+++ b/taoOutcomeUi/locales/lt-LT/reviewerRole.rdf.po
@@ -1,14 +1,18 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint112\n"
-"PO-Revision-Date: 2019-10-09T09:03:10\n"
-"Last-Translator: TAO Translation Team <translation@tao.lu>\n"
-"MIME-Version: 1.0\n"
+"Project-Id-Version: PACKAGE VERSION\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2019-10-04 13:45+0200\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: lt-LT\n"
-"sourceLanguage: en-US\n"
-"targetLanguage: lt-LT\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Translate Toolkit 2.2.5\n"
+"X-Pootle-Path: /lt-LT/tao33/taoOutcomeUi/reviewerRole.rdf.po\n"
+"X-Pootle-Revision: 34591\n"
 
 # http://www.tao.lu/Ontologies/TAOResult.rdf#TaoReviewerRole
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
@@ -19,4 +23,3 @@ msgstr "Peržiūrėtojo Rolė"
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Allow a reviewer Role to fetch item content and delivery results"
 msgstr ""
-
