--- a/taoOutcomeUi/locales/lt-LT/messages.po
+++ b/taoOutcomeUi/locales/lt-LT/messages.po
@@ -14,6 +14,9 @@ msgstr ""
 "X-Pootle-Path: /lt-LT/tao33/taoOutcomeUi/messages.po\n"
 "X-Pootle-Revision: 29406\n"
 
+msgid " "
+msgstr " "
+
 msgid "Add All grades"
 msgstr "Pridėti Visus pažymius"
 
