--- a/taoOutcomeUi/locales/lt-LT/messages.po
+++ b/taoOutcomeUi/locales/lt-LT/messages.po
@@ -1,19 +1,19 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-10-04 13:45+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: lt-LT\n"
+"Project-Id-Version: TAO 3.4.0-sprint112\n"
+"PO-Revision-Date: 2019-10-09T09:03:10\n"
+"Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Language: lt-LT\n"
+"sourceLanguage: en-US\n"
+"targetLanguage: lt-LT\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 2.2.5\n"
-"X-Pootle-Path: /lt-LT/tao33/taoOutcomeUi/messages.po\n"
-"X-Pootle-Revision: 29406\n"
+"X-Poedit-Basepath: ../../\n"
+"X-Poedit-KeywordsList: __\n"
+"X-Poedit-SearchPath-0: .\n"
 
+#, tao-public
 msgid " "
 msgstr " "
 
@@ -25,6 +25,9 @@ msgstr "Pridėti Visus atsakymus"
 
 msgid "Add Delivery"
 msgstr "Pridėti Pateiktį"
+
+msgid "Add Delivery Execution"
+msgstr ""
 
 msgid "Add Test Taker"
 msgstr "Pridėti Testo Laikytoją"
@@ -65,20 +68,28 @@ msgstr "Atsiųsti rezultatą"
 msgid "Email:"
 msgstr "El. paštas:"
 
+msgid "End Delivery Execution"
+msgstr ""
+
 msgid "Error"
 msgstr "Klaida"
 
+#, tao-public
 msgid "Export CSV"
 msgstr "Eksportuoti CSV"
 
 msgid "Export CSV File"
 msgstr "Eksportuoti CSV Failą"
 
+#, tao-public
 msgid "Export Table"
 msgstr "Eksportuoti Lentelę"
 
 msgid "Filter"
 msgstr "Filtras"
+
+msgid "Filters"
+msgstr ""
 
 msgid "First Name:"
 msgstr "Vardas:"
@@ -104,18 +115,18 @@ msgstr "Tik paskutiniai pateikti kintamieji"
 msgid "Login:"
 msgstr "Prisijungimas:"
 
+#, tao-public
 msgid "Manage Results"
 msgstr "Tvarkyti Rezultatus"
 
-msgid ""
-"No tests have been taken yet. As soon as a test-taker will take a test his "
-"results will be displayed here."
-msgstr ""
-"Joks testas dar nebuvo pradėtas. Kai testo laikytojas pradės laikyti testą, "
-"rezultatai bus pateikti čia."
+msgid "No tests have been taken yet. As soon as a test-taker will take a test his results will be displayed here."
+msgstr "Joks testas dar nebuvo pradėtas. Kai testo laikytojas pradės laikyti testą, rezultatai bus pateikti čia."
 
 msgid "Please confirm deletion"
 msgstr "Prašome patvirtinti ištrynimą"
+
+msgid "Preview"
+msgstr ""
 
 msgid "Remove All grades"
 msgstr "Pašalinti Visus pažymius"
@@ -126,23 +137,29 @@ msgstr "Pašalinti Visus atsakymus"
 msgid "Remove Delivery"
 msgstr "Pašalinti Pateiktį"
 
+msgid "Remove Delivery Execution"
+msgstr ""
+
 msgid "Responses"
 msgstr "Atsakymai"
 
 msgid "Result has been deleted"
 msgstr "Rezultatas buvo pašalintas"
 
+#, tao-public
 msgid "Results"
 msgstr "Rezultatai"
 
+#, tao-public
 msgid "Results library"
 msgstr "Rezultatų biblioteka"
 
-msgid "Results Monitoring"
-msgstr "Rezultatų Stebėjimas"
-
 msgid "Results monitoring"
 msgstr "Rezultatų stebėjimas"
+
+#, tao-public
+msgid "Results Monitoring"
+msgstr "Rezultatų Stebėjimas"
 
 msgid "Review"
 msgstr "Peržiūra"
@@ -156,24 +173,26 @@ msgstr "Ieškoti pagal rezultatus"
 msgid "Something went wrong..."
 msgstr "Kažkas blogai nutiko..."
 
+msgid "Start Delivery Execution"
+msgstr ""
+
 msgid "Start Time"
 msgstr "Pradžios Laikas"
-
-msgid "Test taker"
-msgstr "Testo laikytojas"
 
 msgid "Test Taker"
 msgstr "Testo Laikytojas"
 
+msgid "Test taker"
+msgstr "Testo laikytojas"
+
+msgid "Test Taker ID"
+msgstr ""
+
 msgid "Test Variables"
 msgstr "Testo Kintamieji"
 
-msgid ""
-"The class you have selected contains no results to be analysed, please "
-"select a different class"
-msgstr ""
-"Klasė, kurią jūs pasirinkote neturi jokių rezultatų analizavimui. Prašome "
-"pasirinkti kitą klasę."
+msgid "The class you have selected contains no results to be analysed, please select a different class"
+msgstr "Klasė, kurią jūs pasirinkote neturi jokių rezultatų analizavimui. Prašome pasirinkti kitą klasę."
 
 msgid "The number of observations is too low"
 msgstr "Stebėjimų kiekis yra per mažas"
@@ -181,6 +200,7 @@ msgstr "Stebėjimų kiekis yra per mažas"
 msgid "There was a problem generating your report, please try again."
 msgstr "Įvyko problema generuotojant jūsų ataskaitą, prašome bandyti dar kartą."
 
+#, tao-public
 msgid "Tools"
 msgstr "Įrankiai"
 
@@ -190,11 +210,16 @@ msgstr "Pėdsakai"
 msgid "unknown"
 msgstr "nežinoma"
 
+msgid "Variables"
+msgstr ""
+
 msgid "View"
 msgstr "Peržiūrėti"
 
+#, tao-public
 msgid "View and format the collected results."
 msgstr "Peržiūrėti ir formatuoti pasirinktus rezultatus."
 
 msgid "We are preparing your report, please wait..."
 msgstr "Mes ruošiame jūsų ataskaitą, prašome palaukti..."
+
