--- a/taoProctoring/locales/lt-LT/messages.po
+++ b/taoProctoring/locales/lt-LT/messages.po
@@ -37,38 +37,38 @@ msgstr "%s negali būti %s."
 msgid "%s minutes more"
 msgstr "%s minučių daugiau"
 
-msgid "%s\'s test had already been authorized."
-msgstr ""
+msgid "%s's test had already been authorized."
+msgstr "%s testas jau buvo autorizuotas."
 
-msgid "%s\'s test had already been paused."
-msgstr ""
+msgid "%s's test had already been paused."
+msgstr "%s testas jau buvo pristabdytas."
 
-msgid "%s\'s test had already been terminated."
-msgstr ""
+msgid "%s's test had already been terminated."
+msgstr "%s testas jau buvo nutrauktas."
 
-msgid "%s\'s test had been canceled."
-msgstr ""
+msgid "%s's test had been canceled."
+msgstr "%s testas buvo atšauktas."
 
-msgid "%s\'s test had been completed."
-msgstr ""
+msgid "%s's test had been completed."
+msgstr "%s testas buvo atliktas."
 
-msgid "%s\'s test had been paused."
-msgstr ""
+msgid "%s's test had been paused."
+msgstr "%s testas buvo pristabdytas."
 
-msgid "%s\'s test had been terminated."
-msgstr ""
+msgid "%s's test had been terminated."
+msgstr "%s testas buvo nutrauktas."
 
-msgid "%s\'s test had not been finished."
-msgstr ""
+msgid "%s's test had not been finished."
+msgstr "%s testas nebuvo atliktas."
 
-msgid "%s\'s test had not been in progress."
-msgstr ""
+msgid "%s's test had not been in progress."
+msgstr "%s testas nebuvo vykdomas."
 
-msgid "%s\'s test had not been started."
-msgstr ""
+msgid "%s's test had not been started."
+msgstr "%s testas nebuvo pradėtas."
 
-msgid "%s\'s test must be terminated."
-msgstr ""
+msgid "%s's test must be terminated."
+msgstr "%s testas privalo būti nutrauktas."
 
 msgid "..."
 msgstr "..."
