fixed inaccuracies in translations

--- a/taoQtiTest/locales/lt-LT/messages.po
+++ b/taoQtiTest/locales/lt-LT/messages.po
@@ -20,11 +20,8 @@ msgstr "%s - elementas %p/%c"
 msgid "A QTI Item involved in the QTI Test '%s' could not be compiled."
 msgstr "QTI Elementas dalyvaujantis QTI Teste '%s' negali būti surinktas."
 
-msgid ""
-"A QTI Test must contain at least one QTI Item to be compiled. None found."
-msgstr ""
-"QTI Testas privalo turėti bent vieną QTI Elementą, kad būti surinktas. "
-"Niekas nebuvo surasta."
+msgid "A QTI Test must contain at least one QTI Item to be compiled. None found."
+msgstr "QTI Testas privalo turėti bent vieną QTI Elementą, kad būti surinktas. Niekas nebuvo surasta."
 
 msgid "A qti testpackage"
 msgstr "QTI testų paketas"
@@ -437,12 +434,8 @@ msgstr "Klaida"
 msgid "Error during file import"
 msgstr "Klaida failo importavimo metu"
 
-msgid ""
-"Error found in the IMS QTI Test:\n"
-"%s"
-msgstr ""
-"Rasta klaida IMS QTI Teste:\n"
-"%s"
+msgid  "Error found in the IMS QTI Test:\n%s"
+msgstr "Rasta klaida IMS QTI Teste:\n%s"
 
 msgid "Expand the review panel"
 msgstr "Praplėsti apžvalgos skydelį"
@@ -1544,12 +1537,8 @@ msgstr ""
 "Ar jūs tikrai ketinate grįžti prie ankstesnio elemento? Spauskite tęsti ir "
 "grįžkite."
 
-msgid ""
-"You are about to submit the test. You will not be able to access this test "
-"once submitted. Click OK to continue and submit the test."
-msgstr ""
-"Jūs ketinate pateikti savo testą. Jūs negalėsite pasiekti šio testo, kai jis "
-"bus pateiktas. Spauskite Taip norėdami pateikti testą."
+msgid "You are about to submit the test. You will not be able to access this test once submitted. Click OK to continue and submit the test."
+msgstr "Jūs ketinate pateikti savo testą. Jūs negalėsite pasiekti šio testo, kai jis bus pateiktas. Spauskite Taip norėdami pateikti testą."
 
 msgid "You are encountering a prolonged connectivity loss. "
 msgstr "Jūs turite užsitęsusius ryšio trūkčius."
@@ -1560,11 +1549,8 @@ msgstr "Jūs turite %s elementą(-us) pažymėtus peržiūrai."
 msgid "You have %s unanswered question(s)"
 msgstr "Jūs turite %s neatsakytus klausimus"
 
-msgid ""
-"You have %s unanswered question(s) and have %s item(s) marked for review."
-msgstr ""
-"Jūs turite %s neatsakytus klausimą(-us) ir turite %s elementą(-us) pažymėtus "
-"peržiūrai."
+msgid "You have %s unanswered question(s) and have %s item(s) marked for review."
+msgstr "Jūs turite %s neatsakytus klausimą(-us) ir turite %s elementą(-us) pažymėtus peržiūrai."
 
 msgid "You have %s unanswered question(s)."
 msgstr "Jūs turite %s neatsakytus klausimus"
