--- a/taoQtiTest/locales/lt-LT/taoQtiTestItemRunner.rdf.po
+++ b/taoQtiTest/locales/lt-LT/taoQtiTestItemRunner.rdf.po
@@ -1,18 +1,14 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-10-04 13:45+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: lt-LT\n"
+"Project-Id-Version: TAO 3.4.0-sprint112\n"
+"PO-Revision-Date: 2019-10-09T09:03:03\n"
+"Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Language: lt-LT\n"
+"sourceLanguage: en-US\n"
+"targetLanguage: lt-LT\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 2.2.5\n"
-"X-Pootle-Path: /lt-LT/tao33/taoQtiTest/taoQtiTestItemRunner.rdf.po\n"
-"X-Pootle-Revision: 34629\n"
 
 # http://www.tao.lu/Ontologies/TAOTest.rdf#FormalParamQtiTestParentServiceCallId
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
@@ -31,9 +27,6 @@ msgstr "QTI Testo Elemento Vykdytojas"
 
 # http://www.tao.lu/Ontologies/TAODelivery.rdf#ServiceQtiTestItemRunner
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
-msgid ""
-"Embed and run an item into a QTI Test. This service initialize the TAO Apis "
-"and contexts"
-msgstr ""
-"Įterpti ir vykdyti elementą į QTI Testą. Šis servisas vykdo TAO API ir "
-"kontekstus."
+msgid "Embed and run an item into a QTI Test. This service initialize the TAO Apis and contexts"
+msgstr "Įterpti ir vykdyti elementą į QTI Testą. Šis servisas vykdo TAO API ir kontekstus."
+
